--- a/stylesheets/about/aboutMembers.css
+++ b/stylesheets/about/aboutMembers.css
@@ -2,8 +2,8 @@
   display: grid;
   width: 90vw;
   margin: 5vw;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-auto-rows: 25vw;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 70vw;
   grid-gap: 5vw;
 }
 
@@ -13,6 +13,7 @@ div.member-container {
   background-color: aliceblue;
   overflow: hidden;
   text-align: center;
+  overflow-wrap: break-word;
 }
 div.member-container>img.member-image {
   position: absolute;
@@ -30,7 +31,7 @@ div.member-container>img.member-image {
   transition: all 0.5s ease;
 }
 div.member-container>div.member-name {
-  font-size: 2vw;
+  font-size: 4vw;
   position: absolute;
   width: 100%;
   left: 0;
@@ -70,14 +71,33 @@ div.member-overlay-view>div.member-grade {
 div.member-overlay-view>div.member-description {
   padding-top: 40px;
   text-align: left;
-  padding-left: 10px;
-  padding-right: 10px;
 }
 
 div.member-overlay-view>.member-item {
-  font-size: 1.5vw;
+  font-size: 4vw;
   font-weight: 300;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
+@media only screen and (min-width: 600px) {
+  #about-members-section {
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 70vw;
+    grid-gap: 5vw;
+  }
+}
 
-
+@media only screen and (min-width: 960px) {
+  #about-members-section {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-auto-rows: 25vw;
+    grid-gap: 5vw;
+  }
+  div.member-container>div.member-name {
+    font-size: 2vw;
+  }
+  div.member-overlay-view>.member-item {
+    font-size: 1.5vw;
+  }
+}
