--- a/stylesheets/global/footerStyle.css
+++ b/stylesheets/global/footerStyle.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  font-size: 18px;
+  font-size: 4vw;
   font-weight: 300;
 }
 
@@ -23,4 +23,9 @@
   flex-grow: 1;
   text-align: right;
   margin-right: 5vw;
+}
+@media only screen and (min-width: 960px) {
+  .footer {
+    font-size: 1.5vw;
+  }
 }
