--- a/stylesheets/global/globalStyle.css
+++ b/stylesheets/global/globalStyle.css
@@ -10,6 +10,7 @@ body {
   padding: 0;
   /* Overflow hidden constrains all elements to be inside of the window */
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 .underlined-link {
