--- a/stylesheets/media/galleryStyle.css
+++ b/stylesheets/media/galleryStyle.css
@@ -5,18 +5,17 @@ div.media-gallery-section {
 
 div.gallery-year-title {
     margin-left: 5vw;
-    font-size: 4vw;
-    margin-bottom: 2vw;
+    font-size: 8vw;
+    margin-bottom: 5vw;
     margin-top: 3vw;
 }
 
 div.gallery-year-section {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: 30vw;
-    grid-gap: 5vw;
-    margin-left: 5vw;
-    margin-right: 5vw;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 80vw;
+    margin-left: 10vw;
+    margin-right: 10vw;
     justify-items: center;
 }
 div.gallery-item {
@@ -25,9 +24,10 @@ div.gallery-item {
 
 div.gallery-item>div.gallery-image-crop {
     position: relative;
-    height: 60%;
+    height: 70%;
     overflow: hidden;
     box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.4), 0 12px 30px 0 rgba(0, 0, 0, 0.4);
+    cursor: pointer;
 }
 div.gallery-image-crop::after {
     content:'';
@@ -39,7 +39,6 @@ div.gallery-image-crop::after {
     background: linear-gradient(rgba(154,154,154,1),rgba(154,154,154,1));
     transition: all 0.5s ease;
     opacity: 0.25;
-    cursor: pointer;
     color: white;
 }
 
@@ -82,8 +81,8 @@ div.gallery-item img {
 div.gallery-item>div {
     text-align: center;
     font-weight: 300;
-    font-size: 2vw;
-    padding-top: 2vw;
+    font-size: 5vw;
+    padding-top: 5vw;
 }
 
 #gallery-modal {
@@ -137,4 +136,39 @@ div.gallery-item>div {
 
 .gallery-modal-image {
     width: 100%;
+}
+@media only screen and (min-width: 600px) {
+    div.gallery-year-title {
+        font-size: 4vw;
+        margin-bottom: 2vw;
+    }
+    div.gallery-year-section {
+        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: 40vw;
+        grid-gap: 5vw;
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+    div.gallery-item>div {
+        font-size: 3vw;
+        padding-top: 3vw;
+    }
+    div.gallery-item>div.gallery-image-crop {
+        height: 60%;
+    }
+}
+
+@media only screen and (min-width: 960px) {
+    div.gallery-year-section {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-auto-rows: 30vw;
+        grid-gap: 5vw;
+    }
+    div.gallery-item>div.gallery-image-crop {
+        height: 60%;
+    }
+    div.gallery-item>div {
+        font-size: 2vw;
+        padding-top: 2vw;
+    }
 }
