--- a/stylesheets/global/navbarStyle.css
+++ b/stylesheets/global/navbarStyle.css
@@ -3,7 +3,7 @@
   color: white;
   text-align: center;
   font-weight: 300;
-  font-size: calc(12px + 1vw);
+  font-size: 8vw;
 
   /* Set navbar height to 75px and 80% width and center */
   height: 30px;
@@ -19,17 +19,58 @@
   left: 50%;
   overflow: visible;
   transform: translate(-50%, 0);
-  z-index: 20;
+  z-index: 5;
   background-color: rgba(200,200,200,0.5);
   transition: all 0.5s ease;
+}
+
+.navbar-overlay {
+  transform: translateY(-100%);
+  visibility: hidden;
+  opacity: 1;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  background-color: rgb(100,100,100);
+  transition: all 0.5s ease;
+  z-index: 3;
+}
+
+.navbar-overlay-shown {
+  transform: translateY(0);
+  visibility: visible;
+  opacity: 1;
 }
 
 .navbar-logo-image {
   /* Logo is the same height as navbar */
   height: inherit;
-  text-align: center;
+  max-height: 30px;
   /* Padding to right to offset the rest of the nav elements */
-  
+  display: inline-block;
+  text-align: center;
+}
+
+#navbar-menu-icon {
+  width: 21px;
+  height: 21px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 10%;
+  cursor: pointer;
+}
+#navbar-menu-icon:hover .menu-icon-item {
+  background-color: rgb(200, 200, 200);
+}
+#navbar-menu-icon>div {
+  background-color: white;
+  margin: 4px 0;
+  width: 100%;
+  height: 3px;
+  transition: all 0.5s ease;
 }
 /* Navbar element with no dropdown*/
 .navbar-element-no-dropdown {
@@ -66,7 +107,8 @@
   /* Same spacing for all nav elements */
   flex-grow: 1;
   /* Give all nav elements a margin */
-  margin: 5px;
+  
+  margin: 4vh 5px;
   cursor: pointer;
   transition: all 0.5s ease;
   position: relative;
@@ -101,7 +143,6 @@
   transform: scaleY(0.1) translateY(-100%);
   position: absolute;
   transition: all 0.5s ease;
-  z-index: -1;
 
   list-style-type: none;
   margin-top: 0;
@@ -146,10 +187,19 @@
     align-items: flex-end;
     align-content: flex-end;
     height: 10vh;
+    font-size: calc(12px + 1vw);
+  }
+  .navbar-overlay {
+    display: none;
   }
   .navbar-logo-image {
+    position: static;
     margin-right: 80px;
     margin-left: 5vw;
+    max-height: unset;
+  }
+  #navbar-menu-icon {
+    display: none;
   }
 
   .navbar-element-no-dropdown {
@@ -157,6 +207,7 @@
   }
   .navbar-element {
     display: block;
+    margin: 5px;
   }
   
 }
