--- a/stylesheets/about/aboutTheTeamStyle.css
+++ b/stylesheets/about/aboutTheTeamStyle.css
@@ -1,41 +1,54 @@
 #about-team-paragraph-section {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: 1 2.5;
-  grid-template-areas:
-    "paragraph para"
-    "image para";
-  margin-left: 5vw;
-  margin-top:0vw;
-  justify-items: start;
-  z-index: 2;
-  height: auto;
-  margin-right: 5vw;
-
+  margin: 0;
+  background-color: white;
+  padding: 5vw 5vw 0;
 }
-
-#about-team-paragraph-section>#right-paragraph{
-  grid-area: paragraph;
-  padding-right: 2.5vw;
-  margin-top: 2.5vw;
-
-
+#about-team-paragraph-section>h1 {
+  line-height: 1;
+  font-weight: 700;
+  font-size: 12vw;
+  margin: auto 0;
+  padding-bottom: 5vw;
 }
-
-#about-team-paragraph-section>#left-paragraph {
-  grid-area: para;
-  padding-left: 2.5vw;
-  margin-top: 2.5vw;
-  align-self: start;
-
+#about-team-paragraph-section>p {
+  margin: auto;
+  line-height: 2;
+  font-weight: 400;
+  font-size: 6vw;
+  padding-bottom: 5vw;
 }
 #about-team-paragraph-section>#first-image {
-  grid-area: image;
   background: linear-gradient(rgba(154,154,154,0.25), rgba(154,154,154,0.25)), url("../../public/images/team-image.jpg");
   background-size: cover;
-  width: 95%;
-  height: 80%;
-  margin-bottom: 34vw;
-  margin-right: 5vw;
-  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.4), 0 12px 30px 0 rgba(0, 0, 0, 0.4);
+  width: 100vw;
+  height: 70vw;
+  margin: 2vw -5vw 0 -5vw;
+}
+
+@media only screen and (min-width: 600px) {
+  #about-team-paragraph-section {
+    margin: 5vw;
+    background-color: white;
+    padding: 5vw;
+    padding-top: 5vw;
+  }
+  #about-team-paragraph-section>h1 {
+    font-size: 5vw;
+    padding-bottom: 2vw;
+    margin: 0 10vw;
+  }
+  #about-team-paragraph-section>p {
+    font-size: 1.5vw;
+    padding-bottom: 2vw;
+    margin: 0 10vw;
+  }
+  #about-team-paragraph-section>#first-image {
+    background: linear-gradient(rgba(154,154,154,0.25), rgba(154,154,154,0.25)), url("../../public/images/team-image.jpg");
+    background-size: cover;
+    
+    box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.4), 0 12px 30px 0 rgba(0, 0, 0, 0.4);
+    height: 35vw;
+    width: auto;
+    margin: 2vw 10vw 0 10vw;
+  }
 }
