--- a/stylesheets/media/socialStyle.css
+++ b/stylesheets/media/socialStyle.css
@@ -1,77 +1,109 @@
 #media-section {
   display: grid;
-  grid-template-rows: auto auto auto;
-  grid-template-columns: 1fr 2.5fr;
+  width: 90vw;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-areas:
-    "facebook image"
-    "instagram image"
-    "youtube image";
-  align-items: left;
+    "facebookLogo instagramLogo youtubeLogo";
   justify-items: center;
-  height: 30vw;
-  margin-left: 5vw;
-  margin-top: 5vw;
-  margin-bottom: 5vw;
+  margin: 10vw 5vw;
+  grid-gap: 5vw;
 }
-#media-section>#facebookLogo {
-  grid-area: facebook;
-  height: 5.5vw;
-}
-#media-section>#instagramLogo {
-  grid-area: instagram;
-  height: 5.5vw;
-}
-#media-section>#youtubeLogo {
-  grid-area: youtube;
-  height: 5.5vw;
-}
-#facebookLogo>h2 {
+#media-section a {
+  text-decoration: inherit;
+  color: inherit;
   text-align: left;
-  justify-text: left;
-  padding-left: 18.5vw;
+}
+.social-image-logo {
+  height: 15vw;
+  margin-left: 10vw;
+}
+#media-section #facebookLogo {
+  grid-area: facebookLogo;
+}
+#media-section #instagramLogo {
+  grid-area: instagramLogo;
+}
+#media-section #youtubeLogo {
+  grid-area: youtubeLogo;
+}
+.social-description {
+  justify-self: left;
+  position: relative;
+  width: 100%;
+  display: none;
+}
+.social-description h2:hover {
+  color: rgb(200,200,200);
+}
+.social-description h3:hover {
+  color: rgb(200,200,200);
+}
 
+.social-description h2 {
+  position: absolute;
+  margin: 0 auto;
+  top: 0;
+  left: 0;
+  transition: color 0.5s ease;
+  font-size: 5vw;
 }
-#instagramLogo>h2 {
-  text-align: left;
-  justify-text: left;
-  padding-left: 19vw;
+.social-description h3 {
+  position: absolute;
+  margin: 0 auto;
+  bottom: 0;
+  left: 0;
+  transition: color 0.5s ease;
+  font-size: 4vw;
+}
+#facebookDescription {
+  grid-area: facebookDescription;
+}
+#instagramDescription {
+  grid-area: instagramDescription;
+}
+#youtubeDescription {
+  grid-area: youtubeDescription;
+}
 
-}
-#youtubeLogo>h2 {
-  text-align: left;
-  justify-text: left;
-  padding-left: 17.5vw;
-}
-#facebookLogo>h3 {
-  text-align: left;
-  justify-text: left;
-  padding-left: 17.9vw;
-  padding-top: 3vw;
-
-}
-#instagramLogo>h3 {
-  text-align: left;
-  justify-text: left;
-  padding-left: 15.4vw;
-  padding-top: 3vw;
-
-}
-#youtubeLogo>h3 {
-  text-align: left;
-  justify-text: left;
-  padding-left: 17.9vw;
-  padding-top: 3vw;
-}
-#media-section>#social-image {
+#media-section #social-image {
   grid-area: image;
+  justify-self: left;
   background: linear-gradient(rgba(154,154,154,0.25), rgba(154,154,154,0.25)), url("../../public/images/gallery/year2018/NWOScienceFair2018/0preview-image.png");
   background-size: cover;
-  width: 60%;
-  height: 85%;
-  justify-self: end;
-  margin-right: 12.5vw;
-  align-self: end;
-  margin-bottom: 4.25vw;
-
+  width: 35vw;
+  height: 100%;
+  margin-right: 10vw;
   box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.4), 0 12px 30px 0 rgba(0, 0, 0, 0.4);
+  display: none;
+}
+
+@media only screen and (min-width: 600px) {
+  #media-section {
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr 2.5fr auto;
+    grid-template-areas:
+      "facebookLogo facebookDescription image"
+      "instagramLogo instagramDescription image"
+      "youtubeLogo youtubeDescription image";
+    justify-items: center;
+    margin: 5vw;
+    grid-gap: 2vw;
+  }
+  .social-image-logo {
+    height: 5.5vw;
+  }
+  .social-description {
+    display: block;
+  }
+  .social-description h2 {
+    font-size: 2vw;
+  }
+
+  .social-description h3 {
+    font-size: 1.5vw;
+  }
+  #media-section #social-image {
+    display: block;
+  }
 }
