--- a/stylesheets/sponsors/sponsorsStyle.css
+++ b/stylesheets/sponsors/sponsorsStyle.css
@@ -5,8 +5,8 @@
 
 .sponsor-level-title {
     margin-left: 5vw;
-    margin-top: 5vw;
-    font-size: 5vw;
+    margin-top: 10vw;
+    font-size: 8vw;
     font-weight: 300;
     border-bottom: 2px solid #333333;
     padding-bottom: 10px;
@@ -17,14 +17,13 @@
     background-color: white;
     margin-left: 5vw;
     margin-right: 5vw;
-    margin-top: 2vw;
+    margin-top: 5vw;
     display: grid;
-    grid-template-rows: 1fr 2fr 1fr;
-    grid-template-columns: 3fr 4fr;
+    grid-template-rows: 4fr 1fr;
+    grid-template-columns: 7fr 4fr;
     grid-template-areas:
-        "img title"
-        "img description"
-        "img link";
+        "img img"
+        "title link";
     padding: 10px;
     height: 20vh;
     align-items: center;
@@ -39,28 +38,30 @@
 }
 .major-sponsor-item>.major-sponsor-item-title {
     grid-area: title;
-    justify-self: start;
-    font-size: 2vw;
+    justify-self: left;
+    font-size: 5vw;
 }
 .major-sponsor-item>.major-sponsor-item-description {
     grid-area: description;
     font-weight: 400;
     justify-self: stretch;
-    font-size: 1.5vw;
+    font-size: 4vw;
     font-weight: 300;
+    display: hidden;
 }
 .major-sponsor-item>.major-sponsor-item-link {
     grid-area: link;
     justify-self: end;
+    align-self: end;
 }
 
 .minor-sponsors-container {
     background-color: white;
     margin-left: 5vw;
     margin-right: 5vw;
-    margin-top: 2vw;
+    margin-top: 5vw;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-auto-rows: 15vh;
     grid-gap: 5vw;
     padding: 5vw;
@@ -115,6 +116,9 @@
     font-size: 2vw;
     font-weight: 300;
 }
+.minor-sponsor-item>.minor-sponsor-item-description {
+    display: none;
+}
 
 .minor-sponsor-item:hover .minor-sponsor-item-image  {
     visibility: hidden;
@@ -125,4 +129,63 @@
     visibility: visible;
     opacity: 1;
     transform: translateY(0);
+}
+
+@media only screen and (min-width: 600px) {
+    .sponsor-level-title {
+        margin-left: 5vw;
+        margin-top: 5vw;
+        font-size: 5vw;
+        font-weight: 300;
+        border-bottom: 2px solid #333333;
+        padding-bottom: 10px;
+        margin-right: 5vw;
+    }
+    .major-sponsor-item {
+        display: grid;
+        grid-template-rows: 1fr 2fr 1fr;
+        grid-template-columns: 3fr 4fr;
+        grid-template-areas:
+            "img title"
+            "img description"
+            "img link";
+        padding: 10px;
+        height: 20vh;
+        align-items: center;
+        justify-items: center;
+    }
+    .major-sponsor-item>.major-sponsor-item-image {
+        grid-area: img;
+        max-width: 80%;
+        max-height: 80%;
+        width: auto;
+    }
+    .major-sponsor-item>.major-sponsor-item-title {
+        grid-area: title;
+        justify-self: start;
+        font-size: 2vw;
+    }
+    .major-sponsor-item>.major-sponsor-item-description {
+        grid-area: description;
+        font-weight: 400;
+        justify-self: stretch;
+        font-size: 1.5vw;
+        font-weight: 300;
+        display: block;
+    }
+    .major-sponsor-item>.major-sponsor-item-link {
+        grid-area: link;
+        justify-self: end;
+    }
+    .minor-sponsors-container {
+        margin-left: 5vw;
+        margin-right: 5vw;
+        margin-top: 2vw;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-auto-rows: 15vh;
+    }
+    .minor-sponsor-item>.minor-sponsor-item-description {
+        display: block;
+    }
 }
