Added readme and changed up some styles

--- a/src/stylesheets/homeStyle.css
+++ b/src/stylesheets/homeStyle.css
@@ -29,7 +29,7 @@
 .home-main-background-image {
   /* Set the background image with a 40% opacity gray overlay */
   /* Change the gray value and opacity depending on background image and visibilty of text */
-  background-image: linear-gradient(rgba(152,152,152, 0.25), rgba(152,152,152, 0.25)), url("/images/main-image.jpg");
+  background-image: linear-gradient(rgba(152,152,152, 0.5), rgba(152,152,152, 0.5)), url("/images/main-image.jpg");
   /* Only 1 copy of the background is used (don't tile) */
   background-repeat: no-repeat;
   /* Cover whole entire div */
@@ -124,7 +124,7 @@
 
 #home-about-section>#home-about-image {
   grid-area: image;
-  background: linear-gradient(rgba(154,154,154,0.25), rgba(154,154,154,0.25)), url("/images/main-image.jpg");
+  background: linear-gradient(rgba(154,154,154,0.25), rgba(154,154,154,0.25)), url("/images/main-image2.jpg");
   background-position: left;
   background-size: cover;
   width: 90vw;
@@ -162,7 +162,7 @@
 }
 #home-outreach-section>#home-outreach-image {
   grid-area: image;
-  background: linear-gradient(rgba(154,154,154,0.25), rgba(154,154,154,0.25)), url("/images/main-image.jpg");
+  background: linear-gradient(rgba(154,154,154,0.25), rgba(154,154,154,0.25)), url("/images/main-image2.jpg");
   background-position: left;
   background-size: cover;
   width: 75%;
@@ -184,7 +184,7 @@
 #home-media-background-image {
   /* Set the background image with a 40% opacity gray overlay */
   /* Change the gray value and opacity depending on background image and visibilty of text */
-  background-image: linear-gradient(rgba(152,152,152, 0.25), rgba(152,152,152, 0.25)), url("/images/main-image.jpg");
+  background-image: linear-gradient(rgba(152,152,152, 0.25), rgba(152,152,152, 0.25)), url("/images/main-image2.jpg");
   /* Only 1 copy of the background is used (don't tile) */
   background-repeat: no-repeat;
   /* Cover whole entire div */
