--- a/src/stylesheets/global/navbarStyle.css
+++ b/src/stylesheets/global/navbarStyle.css
@@ -1,4 +1,8 @@
-#navbar {
+.no-scroll {
+  overflow: hidden;
+}
+
+.navbar {
   /* Set all text colour to white, align to center, and light font */
   color: white;
   text-align: center;
@@ -12,7 +16,6 @@
   padding-right: 5vw;
 
   /* Position navbar to the center */
-  position: absolute;
   top: 0;
   padding-top: 2vh;
   padding-bottom: 2vh;
@@ -22,6 +25,17 @@
   z-index: 5;
   background-color: rgba(100,100,100,0);
   transition: all 0.5s ease;
+}
+.navbar-top {
+  position: absolute;
+  background-color: rgba(0,0,0,0);
+}
+.navbar-fixed {
+  position: fixed;
+  background-color: rgb(100,100,100);
+  -webkit-box-shadow: 0px 10px 39px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 10px 39px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.75);
 }
 
 .navbar-overlay {
@@ -137,6 +151,10 @@ a {
   display: none;
 }
 
+.navbar-element-menu-shown {
+  display: block;
+}
+
 .navbar-element:hover {
   background-color: rgba(200,200,200,0.8);
 }
@@ -202,12 +220,12 @@ a {
 }
 
 @media only screen and (min-width: 600px) {
-  #navbar {
+  .navbar {
     /* Flex display in a row - span whole width */
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
-    align-content: flex-end;
+    align-items: center;
+    align-content: center;
     height: 10vh;
     font-size: calc(12px + 1vw);
   }
