--- a/src/stylesheets/resources/blogStyle.css
+++ b/src/stylesheets/resources/blogStyle.css
@@ -2,10 +2,17 @@
     margin: 5vw;
     padding: 5vw;
     background-color: white;
-    font-size: 2vw;
+    font-size: 5vw;
 }
 
 #blog-section>a {
     color: blue;
     text-decoration: underline;
 }
+
+@media only screen and (min-width: 600px) {
+    #blog-section {
+        font-size: 2vw;
+    }
+}
+
