--- a/src/stylesheets/about/aboutMembers.css
+++ b/src/stylesheets/about/aboutMembers.css
@@ -4,7 +4,6 @@
   margin: 5vw;
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: 70vw;
-  grid-gap: 5vw;
 }
 
 div.member-container {
@@ -14,18 +13,24 @@ div.member-container {
   overflow: hidden;
   text-align: center;
   overflow-wrap: break-word;
+  cursor: pointer;
+}
+div.member-container.without-image:nth-child(3n) {
+  background-color: #444444;
+}
+div.member-container.without-image:nth-child(3n + 1) {
+  background-color: #636363;
+}
+div.member-container.without-image:nth-child(3n + 2) {
+  background-color: #232323;
 }
 div.member-container>img.member-image {
   position: absolute;
-  left: -100%;
-  right: -100%;
-  top: -100%;
-  bottom: -100%;
-  margin: auto;
-  width: auto;
-  min-width: 110%;
+  left: 0;
+  top: 0;
+  width: 100%;
   height: 100%;
-  min-height: 110%;
+  object-fit: cover;
   background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8));
   z-index: 1;
   transition: all 0.5s ease;
@@ -35,69 +40,81 @@ div.member-container>div.member-name {
   position: absolute;
   width: 100%;
   left: 0;
-  bottom: 0;
-  background-color: white;
+  top: 50%;
+  transform: translateY(-50%);
+  color: white;
+  font-weight: 900;
   z-index: 2;
-  padding-top: 2px;
-  padding-bottom: 2px;
-}
-
-div.member-container>div.member-overlay-view {
-  visibility: hidden;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 0;
-  height: 100%;
-  background-color: rgba(255,255,255,0.8);
-  z-index: 1;
-  overflow: scroll;
   transition: all 0.5s ease;
 }
 
-div.member-container:hover>div.member-overlay-view {
-  visibility: visible;
+div.member-container>div.member-overlay-view {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
   width: 100%;
+  background-color: rgba(0,0,0,0.4);
+  opacity: 0;
+  z-index: 1;
+  overflow: hidden;
+  transition: all 0.5s ease;
+  color: white;
+  display: grid;
+  grid-template-rows: auto auto auto;
+  grid-template-columns: 100%;
+  justify-items: center;
+  align-items: center;
+  text-align: center;
+}
+
+div.member-container:hover>div.member-overlay-view {
+  opacity: 1;
+}
+div.member-container:hover>div.member-name {
+  opacity: 0;
 }
 
 div.member-overlay-view>div.member-role {
-  padding-top: 10px;
+  align-self: end;
+  width: 90%;
   font-weight: 600;
 }
 div.member-overlay-view>div.member-grade {
   font-weight: 400;
-  padding-bottom: 20px;
+  width: 90%;
 }
-div.member-overlay-view>div.member-description {
-  padding-top: 40px;
-  text-align: left;
+div.member-overlay-view>div.member-email {
+  align-self: start;
+  width: 90%;
 }
 
 div.member-overlay-view>.member-item {
   font-size: 4vw;
   font-weight: 300;
-  margin-left: 10px;
-  margin-right: 10px;
 }
 
 @media only screen and (min-width: 600px) {
   #about-members-section {
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: 70vw;
-    grid-gap: 5vw;
   }
 }
 
 @media only screen and (min-width: 960px) {
   #about-members-section {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-auto-rows: 25vw;
-    grid-gap: 5vw;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-auto-rows: 20vw;
+    grid-gap: 0;
   }
   div.member-container>div.member-name {
-    font-size: 2vw;
+    font-size: 1.5vw;
+    width: 90%;
   }
   div.member-overlay-view>.member-item {
-    font-size: 1.5vw;
+    font-size: 1.2vw;
+  }
+  div.member-overlay-view>.member-email {
+    font-size: 1vw;
   }
 }
